src/objects/Payment_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Loan_Self_Funded__c</fullName>
        <label>Bank Loan/Self Funded</label>
        <picklist>
            <picklistValues>
                <fullName>Bank Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Funded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_GST_on_Token__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No GST on Token</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Code__c</fullName>
        <label>Plan Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Payment Plans</relationshipLabel>
        <relationshipName>Payment_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Payment_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Payment Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Vention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub Vention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subvention_Base_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Subvention Base Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tower</label>
        <referenceTo>Tower__c</referenceTo>
        <relationshipLabel>Payment Plans</relationshipLabel>
        <relationshipName>Payment_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Plan_Code__c</fullName>
        <label>Unique Plan Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Payment Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Plans</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>